[radeon, rs690] piglit spec@glsl-1.10@execution@built-in-functions@fs-atan-float + 10 other 'atan' tests crash (mesa-22dev)
Following tests running on mesa 22.0.0git-4198ca4b
spec@glsl-1.10@execution@built-in-functions@fs-atan-float
spec@glsl-1.10@execution@built-in-functions@fs-atan-float-float
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec2
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec2-vec2
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec3
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec3-vec3
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec4
spec@glsl-1.10@execution@built-in-functions@fs-atan-vec4-vec4
spec@glsl-1.10@execution@builtins@glsl-fs-atan-1
spec@glsl-1.10@execution@builtins@glsl-fs-atan-2
spec@glsl-1.10@execution@builtins@glsl-fs-atan-3
all crash showing this sterr:
r300: DRM version: 2.50.0, Name: ATI RS690, ID: 0x791f, GB: 1, Z: 1
r300: GART size: 509 MB, VRAM size: 256 MB
r300: AA compression RAM: YES, Z compression RAM: NO, HiZ RAM: NO
shader_runner: ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:2615: void glsl_to_tgsi_visitor::visit_expression(ir_expression*, st_src_reg*): Assertion `!"Invalid ir opcode in glsl_to_tgsi_visitor::visit()"' failed.
Backtrace of running spec@glsl-1.10@execution@built-in-functions@fs-atan-float via gdb shows:
Reading symbols from bin/shader_runner...
(gdb) run /home/ef/piglit/generated_tests/spec/glsl-1.10/execution/built-in-functions/fs-atan-float.shader_test -auto -fbo
Starting program: /home/ef/piglit/bin/shader_runner /home/ef/piglit/generated_tests/spec/glsl-1.10/execution/built-in-functions/fs-atan-float.shader_test -auto -fbo
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
[New Thread 0x7fffef0c0640 (LWP 886)]
[New Thread 0x7fffee771640 (LWP 887)]
r300: DRM version: 2.50.0, Name: ATI RS690, ID: 0x791f, GB: 1, Z: 1
r300: GART size: 509 MB, VRAM size: 256 MB
r300: AA compression RAM: YES, Z compression RAM: NO, HiZ RAM: NO
shader_runner: ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:2615: void glsl_to_tgsi_visitor::visit_expression(ir_expression*, st_src_reg*): Assertion `!"Invalid ir opcode in glsl_to_tgsi_visitor::visit()"' failed.
Thread 1 "shader_runner" received signal SIGABRT, Aborted.
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
49 return ret;
(gdb) bt
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
#1 0x00007ffff77dd536 in __GI_abort () at abort.c:79
#2 0x00007ffff77dd41f in __assert_fail_base (fmt=<optimized out>, assertion=<optimized out>, file=<optimized out>, line=<optimized out>, function=<optimized out>) at assert.c:92
#3 0x00007ffff77ebd42 in __GI___assert_fail (assertion=0x7ffff6dc2a40 "!\"Invalid ir opcode in glsl_to_tgsi_visitor::visit()\"",
file=0x7ffff6dc1ff8 "../src/mesa/state_tracker/st_glsl_to_tgsi.cpp", line=2615, function=0x7ffff6dc27b8 "void glsl_to_tgsi_visitor::visit_expression(ir_expression*, st_src_reg*)")
at assert.c:101
#4 0x00007ffff64d5fd7 in glsl_to_tgsi_visitor::visit_expression (this=0x555555d5d7e0, ir=0x555555d413b0, op=0x7fffffffc260) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:2615
#5 0x00007ffff64cdacd in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d413b0) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:1612
#6 0x00007ffff684c988 in ir_expression::accept (this=0x555555d413b0, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1617
#7 0x00007ffff64cd9b6 in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d41730) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:1597
#8 0x00007ffff684c988 in ir_expression::accept (this=0x555555d41730, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1617
#9 0x00007ffff64cd9b6 in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d43460) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:1597
#10 0x00007ffff684c988 in ir_expression::accept (this=0x555555d43460, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1617
#11 0x00007ffff64cd9b6 in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d4f860) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:1597
#12 0x00007ffff684c988 in ir_expression::accept (this=0x555555d4f860, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1617
#13 0x00007ffff64d8795 in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d4aa20) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:3322
#14 0x00007ffff683653a in ir_assignment::accept (this=0x555555d4aa20, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1485
#15 0x00007ffff64ccea6 in glsl_to_tgsi_visitor::visit (this=0x555555d5d7e0, ir=0x555555d40980) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:1471
#16 0x00007ffff68364a0 in ir_function::accept (this=0x555555d40980, v=0x555555d5d7e0) at ../src/compiler/glsl/ir.h:1343
#17 0x00007ffff684c37f in visit_exec_list (list=0x555555d39fc0, visitor=0x555555d5d7e0) at ../src/compiler/glsl/ir.cpp:2262
#18 0x00007ffff64eb350 in get_mesa_program_tgsi (ctx=0x7fffedf06010, shader_program=0x555555d37fa0, shader=0x555555d4a860) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:7276
#19 0x00007ffff64ebb8a in st_link_tgsi (ctx=0x7fffedf06010, prog=0x555555d37fa0) at ../src/mesa/state_tracker/st_glsl_to_tgsi.cpp:7501
#20 0x00007ffff64bb0b9 in st_link_shader (ctx=0x7fffedf06010, prog=0x555555d37fa0) at ../src/mesa/state_tracker/st_glsl_to_ir.cpp:178
#21 0x00007ffff6477781 in _mesa_glsl_link_shader (ctx=0x7fffedf06010, prog=0x555555d37fa0) at ../src/mesa/program/link_program.cpp:91
#22 0x00007ffff640d06c in link_program (no_error=false, shProg=0x555555d37fa0, ctx=0x7fffedf06010) at ../src/mesa/main/shaderapi.c:1401
#23 link_program_error (ctx=0x7fffedf06010, shProg=0x555555d37fa0) at ../src/mesa/main/shaderapi.c:1512
#24 0x00007ffff640e9f1 in _mesa_LinkProgram (programObj=3) at ../src/mesa/main/shaderapi.c:1998
#25 0x00007ffff7e8da3e in stub_glLinkProgram (program=3) at /home/ef/piglit/tests/util/piglit-dispatch-gen.c:34426
#26 0x000055555555ff88 in link_and_use_shaders () at /home/ef/piglit/tests/shaders/shader_runner.c:1652
#27 0x000055555556d11b in init_test (file=0x7fffffffe210 "/home/ef/piglit/generated_tests/spec/glsl-1.10/execution/built-in-functions/fs-atan-float.shader_test")
at /home/ef/piglit/tests/shaders/shader_runner.c:5527
#28 0x000055555556e1d9 in piglit_init (argc=2, argv=0x7fffffffde78) at /home/ef/piglit/tests/shaders/shader_runner.c:5910
#29 0x00007ffff7efe338 in run_test (gl_fw=0x55555558deb0, argc=2, argv=0x7fffffffde78) at /home/ef/piglit/tests/util/piglit-framework-gl/piglit_fbo_framework.c:50
#30 0x00007ffff7eee20e in piglit_gl_test_run (argc=2, argv=0x7fffffffde78, config=0x7fffffffdd20) at /home/ef/piglit/tests/util/piglit-framework-gl.c:229
#31 0x000055555555c891 in main (argc=2, argv=0x7fffffffde78) at /home/ef/piglit/tests/shaders/shader_runner.c:72
piglit quick testsuite results + summary attached. rs690_22.0.0git-4198ca4b3f.tar.bz2